[DTSPB-5898] feat(caveat): simplify submission date change logic and improve validation date handling